# salesforce-python

./: README.md  pyproject.toml  setup.py
files/: apex_class.txt  apex_trigger.txt
salesforce/: client.py  decorators.py  exceptions.py
